[gd_scene load_steps=38 format=3 uid="uid://b13j56wiy5bjp"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_qsibb"]
[ext_resource type="Script" path="res://common/finite_state_machine/finite_state_machine.gd" id="2_f4eej"]
[ext_resource type="PackedScene" uid="uid://ykdbqyw6lecd" path="res://common/components/hitbox/hitbox_component.tscn" id="4_q3ebq"]
[ext_resource type="PackedScene" uid="uid://cjpp55dyan0tc" path="res://common/components/health/health_component.tscn" id="5_q6e4e"]
[ext_resource type="Script" path="res://entities/player/states/player_sit_state.gd" id="6_fg33t"]
[ext_resource type="PackedScene" uid="uid://cnb68lje5v6iy" path="res://common/shaders/silhouette_sprite/silhouette_sprite.tscn" id="7_phdj8"]
[ext_resource type="Texture2D" uid="uid://dmpmko5pyopfe" path="res://entities/player/art/human_nobleman_2.png" id="8_b35jp"]
[ext_resource type="Script" path="res://entities/player/states/player_idle_state.gd" id="9_0khh0"]
[ext_resource type="Script" path="res://entities/player/states/player_move_state.gd" id="9_02503"]
[ext_resource type="Script" path="res://entities/player/states/player_swim_state.gd" id="9_fa61r"]
[ext_resource type="Shader" path="res://common/shaders/sprite_outline/sprite_outline.gdshader" id="16_ylx78"]
[ext_resource type="PackedScene" uid="uid://dbvxi8hlunflt" path="res://common/shaders/water_trail/water_trail.tscn" id="20_11rme"]
[ext_resource type="PackedScene" uid="uid://d2s40e1amubhv" path="res://common/components/footstep/footstep_component.tscn" id="21_0wihk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mp56p"]
atlas = ExtResource("8_b35jp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4f3oy"]
size = Vector2(10, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgslm"]
size = Vector2(10, 19)

[sub_resource type="Animation" id="Animation_ydgaj"]
length = 0.001

[sub_resource type="AtlasTexture" id="AtlasTexture_jvq0d"]
atlas = ExtResource("8_b35jp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="Animation" id="Animation_a5un6"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_mp56p"), SubResource("AtlasTexture_jvq0d")]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_0v2ek"]
atlas = ExtResource("8_b35jp")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq6bj"]
atlas = ExtResource("8_b35jp")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoptd"]
atlas = ExtResource("8_b35jp")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plj2k"]
atlas = ExtResource("8_b35jp")
region = Rect2(96, 128, 32, 32)

[sub_resource type="Animation" id="Animation_yo6ve"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_0v2ek"), SubResource("AtlasTexture_dq6bj"), SubResource("AtlasTexture_hoptd"), SubResource("AtlasTexture_plj2k")]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_eb6rx"]
atlas = ExtResource("8_b35jp")
region = Rect2(0, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhvr6"]
atlas = ExtResource("8_b35jp")
region = Rect2(32, 416, 32, 32)

[sub_resource type="Animation" id="Animation_k7cy2"]
resource_name = "swim"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_eb6rx"), SubResource("AtlasTexture_qhvr6")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ankr7"]
_data = {
"RESET": SubResource("Animation_ydgaj"),
"idle": SubResource("Animation_a5un6"),
"move": SubResource("Animation_yo6ve"),
"swim": SubResource("Animation_k7cy2")
}

[sub_resource type="Animation" id="Animation_ltw5y"]
length = 0.001

[sub_resource type="Animation" id="Animation_skaai"]
resource_name = "melee_attack_left"
length = 0.4

[sub_resource type="Animation" id="Animation_jnbma"]
resource_name = "melee_attack"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_66n73"]
_data = {
"RESET": SubResource("Animation_ltw5y"),
"melee_attack_left": SubResource("Animation_skaai"),
"melee_attack_right": SubResource("Animation_jnbma")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_x1kgs"]
load_path = "res://.godot/imported/health_bar.png-bcbcf931410eb7285f52e35f5e52614e.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h2cps"]
texture = SubResource("CompressedTexture2D_x1kgs")
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdnxj"]
bg_color = Color(0.0939358, 0.646466, 0.711549, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_biwr1"]
shader = ExtResource("16_ylx78")
shader_parameter/outline_color = null

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_dvj8k"]
polygon = PackedVector2Array(2, 6, -2, 6, -3, 5, -3, 4, -2, 3, 2, 3, 3, 4, 3, 5)

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_qsibb")

[node name="StateMachines" type="Node" parent="."]

[node name="MovementStateMachine" type="Node" parent="StateMachines" node_paths=PackedStringArray("state")]
script = ExtResource("2_f4eej")
state = NodePath("PlayerIdleState")

[node name="PlayerIdleState" type="Node" parent="StateMachines/MovementStateMachine" node_paths=PackedStringArray("actor", "anim")]
script = ExtResource("9_0khh0")
actor = NodePath("../../..")
anim = NodePath("../../../MovementAnimationPlayer")

[node name="PlayerMovingState" type="Node" parent="StateMachines/MovementStateMachine" node_paths=PackedStringArray("actor", "anim")]
script = ExtResource("9_02503")
actor = NodePath("../../..")
anim = NodePath("../../../MovementAnimationPlayer")

[node name="PlayerSwimState" type="Node" parent="StateMachines/MovementStateMachine" node_paths=PackedStringArray("actor", "anim", "drown_bar", "water_trail")]
script = ExtResource("9_fa61r")
actor = NodePath("../../..")
anim = NodePath("../../../MovementAnimationPlayer")
drown_bar = NodePath("../../../DrownBar")
water_trail = NodePath("../../../WaterTrail")

[node name="PlayerSitState" type="Node" parent="StateMachines/MovementStateMachine" node_paths=PackedStringArray("actor", "anim")]
script = ExtResource("6_fg33t")
actor = NodePath("../../..")
anim = NodePath("../../../MovementAnimationPlayer")

[node name="CharacterSprite" parent="." instance=ExtResource("7_phdj8")]
texture = SubResource("AtlasTexture_mp56p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_4f3oy")

[node name="HealthComponent" parent="." instance=ExtResource("5_q6e4e")]
MAX_HEALTH = 20.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_q3ebq")]
health_component = NodePath("../HealthComponent")
type = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_hgslm")

[node name="MovementAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ankr7")
}

[node name="OnHandAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_66n73")
}

[node name="DrownBar" type="ProgressBar" parent="."]
visible = false
z_index = 1
offset_left = -7.0
offset_top = -13.0
offset_right = 7.0
offset_bottom = -11.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxTexture_h2cps")
theme_override_styles/fill = SubResource("StyleBoxFlat_sdnxj")
value = 100.0
show_percentage = false

[node name="Timer" type="Timer" parent="DrownBar"]
wait_time = 0.5

[node name="PlayerHurtTimer" type="Timer" parent="DrownBar"]

[node name="WaterTrail" parent="." instance=ExtResource("20_11rme")]
visible = false
z_index = -1
position = Vector2(0, 5)

[node name="FootstepComponent" parent="." instance=ExtResource("21_0wihk")]

[node name="StarveDamageTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="OnHand" type="Marker2D" parent="."]
material = SubResource("ShaderMaterial_biwr1")

[node name="HandPoint" type="Node2D" parent="OnHand"]
use_parent_material = true
position = Vector2(10, -3)
scale = Vector2(0.75, 0.75)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_dvj8k")

[connection signal="damaged" from="HealthComponent" to="." method="_on_health_component_damaged"]
[connection signal="timeout" from="StarveDamageTimer" to="." method="_on_starve_damage_timer_timeout"]
